k8s/database/postgres-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-deny-all
  namespace: platform-dev
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Egress
  - Ingress
